--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# go built things
+bin
 
 # Created by https://www.gitignore.io/api/go,vim,macos,linux,windows
 # Edit at https://www.gitignore.io/?templates=go,vim,macos,linux,windows
