--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # go built things
 bin
+.bin-stamp
 
 # Created by https://www.gitignore.io/api/go,vim,macos,linux,windows
 # Edit at https://www.gitignore.io/?templates=go,vim,macos,linux,windows
